--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     <!-- Navbar -->
    <app-navbar></app-navbar>
     <!-- End Navbar -->
-    <div class="content">
+    <div class="main-content">
       <div class="container-fluid">
       <router-outlet></router-outlet>
       </div>
