--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -26,10 +26,8 @@
     </nav>
     <div class="copyright float-right">
       &copy;
-      <script>
-        document.write(new Date().getFullYear())
-      </script>, made with <i class="material-icons">favorite</i> by
-      <a target="_blank" href="https://www.creative-tim.com" target="_blank">Creative Tim</a> for a better web.
+      {{ actualYear}}, made with <i class="material-icons">favorite</i> by
+      <a target="_blank" href="" target="_blank">Piszkos 12 csapata</a> for a better web.
     </div>
   </div>
 </footer>
