--- a/src/app/page/edit-bill/edit-bill.component.html
+++ b/src/app/page/edit-bill/edit-bill.component.html
@@ -11,23 +11,35 @@
     <div class="form-group">
       <label for="orderID">OrderID</label>
       <input [(ngModel)]='bill.orderID' type="number" class="form-control" id="orderID"
-       name="orderID" required aria-describedby="orderID" required #billOrderID="ngModel" pattern=[min(1)]>
-      <div [hidden]="billOrderID.valid || billOrderID.pristine">The Order required!</div>
+       name="orderID" required aria-describedby="orderID" required  [formControl]="orderIDControll" >
+      <div [hidden]="orderIDControll.valid || orderIDControll.pristine">The Order required!</div>
     </div>
 
     <div class="form-group">
       <label for="amount">Amount</label>
       <input [(ngModel)]='bill.amount' type="number" class="form-control" id="amount"
-       name="amount" aria-describedby="amount" required #billAmount="ngModel" pattern=[min(1)]>
-       <div [hidden]="billAmount.valid || billAmount.pristine">The amount required!</div>
+       name="amount" aria-describedby="amount" required [formControl]="amountControll">
+       <div [hidden]="amountControll.valid || amountControll.pristine">The amount required!</div>
     </div>
+    <div class="form-group">
+      <label for="status">Status</label>
+       <select [(ngModel)]="bill.status"   class="form-control" id="status" name="status" required>
+      <option *ngFor="let status of billStatus" [value]="status.status">{{ status.status }}</option>
+       </select>
+      <!-- <select [(ngModel)]="order.status" class="form-control" id="status" name="status" required>
+          <option value="new">New</option>
+          <option value="shipped">Shipped</option>
+          <option value="paid">Paid</option>
+      </select> -->
+  </div>
 
-  <button [disabled]="!billForm.valid" (click)="onSave()" type="submit"
+  <button [disabled]="!billForm.valid || orderIDControll.invalid || amountControll.invalid" (click)="onSave()" type="submit"
     class="btn btn-warning float-right" mat-raised-button=""><span class="mat-button-wrapper">Submit</span>
     <div class="mat-button-ripple-mat-riple" matripple=""></div>
     <div class="mat-button-focus-overlay"></div>
   </button>
     </div>
+    <div class="clearfix"></div>
 </form>
 
 </div>
