--- a/src/app/page/edit-order/edit-order.component.html
+++ b/src/app/page/edit-order/edit-order.component.html
@@ -38,13 +38,14 @@
                     </div>
                     <div class="form-group">
                         <label for="status">Status</label>
-                        <!-- <select [(ngModel)]="order.status"  (change)="onTypeSelect($event)" class="form-control" id="status" name="status" required>
-                        <option *ngFor="let status of orderStatus" [value]="status.id">{{ orderStatus.status }}</option> -->
-                        <select [(ngModel)]="order.status" class="form-control" id="status" name="status" required>
+                         <select [(ngModel)]="order.status"   class="form-control" id="status" name="status" required>
+                        <option *ngFor="let status of orderStatus" [value]="status.status">{{ status.status }}</option>
+                         </select>
+                        <!-- <select [(ngModel)]="order.status" class="form-control" id="status" name="status" required>
                             <option value="new">New</option>
                             <option value="shipped">Shipped</option>
                             <option value="paid">Paid</option>
-                        </select>
+                        </select> -->
                     </div>
                     <button (click)="onSubmit(order)" class="btn btn-primary pull-right mat-raised-button mt-5 mb-5"
                         mat-raised-button="" type="submit" [disabled]="form.invalid">
