--- a/src/app/page/bill-list/bill-list.component.html
+++ b/src/app/page/bill-list/bill-list.component.html
@@ -68,7 +68,9 @@
               </thead>
 
                   <tbody>
-                      <tr *ngFor="let bill of billList$ | async | orderBy:order:reverse">
+                      <tr *ngFor="let bill of billList$ | async | orderBy:order:reverse | paginate: { itemsPerPage: 10,
+                          currentPage: page,
+                          totalItems:totalLength}">
                           <td *ngFor="let col of cols">{{ bill[col.key] }}</td>
                           <!-- <td>{{ bill.orderID }}</td> -->
                           <!-- <td>{{ bill.customerID }}</td> -->
@@ -95,7 +97,7 @@
                       </tr>
                   </tbody>
               </table>
-
+              <pagination-controls class="text-center" (pageChange)="page = $event"></pagination-controls>
           </div>
       </div>
   </div>
