--- a/src/app/page/order-list/order-list.component.html
+++ b/src/app/page/order-list/order-list.component.html
@@ -57,7 +57,7 @@
                               (click)="setOrder('status')">Status
                               <span [hidden]="reverse">▼</span><span [hidden]="!reverse">▲</span>
                             </th> -->
-                            
+
                         </tr>
                         <!-- <tr>
                             <th><input (keyup)="onFilter('id', $event)" class="form-control"  type="text" placeholder="Search ID"></th>
@@ -68,7 +68,10 @@
                         </tr> -->
                     </thead>
                     <tbody>
-                        <tr *ngFor="let order of orderList$ | async | orderBy: order : reverse">
+                        <tr *ngFor="let order of orderList$ | async | orderBy: order : reverse | paginate: { itemsPerPage: 10,
+                          currentPage: page,
+                          totalItems:totalLength
+                         }">
                             <td *ngFor="let col of cols">{{ order[col.key] }}</td>
                             <!-- <td>{{ order.id }}</td>
                             <td>{{ order.customerID }}</td>
@@ -92,6 +95,7 @@
                         </tr>
                     </tbody>
                 </table>
+                <pagination-controls class="text-center" (pageChange)="page = $event"></pagination-controls>
             </div>
         </div>
     </div>
