--- a/src/app/common/info-card/info-card.component.html
+++ b/src/app/common/info-card/info-card.component.html
@@ -8,7 +8,7 @@
   </div>
   <div class="card-footer mt-auto">
     <div class="stats">
-      {{ footer }}
+      <a [routerLink]="[link]" class="stretched-link">{{ footer }}</a>
     </div>
   </div>
 </div>
