add color purple

--- a/src/app/page/dashboard/dashboard.component.html
+++ b/src/app/page/dashboard/dashboard.component.html
@@ -56,7 +56,7 @@
 
   <div class="col-xl-4 col-lg-12">
 
-    <app-status-card [cardClass]="'card-header-danger'" title="Orders" [data]="orderStatusChartData"
+    <app-status-card [cardClass]="'card-header-purple'" title="Orders" [data]="orderStatusChartData"
       [colors]="orderStatusChartColors">
     </app-status-card>
 
