--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -27,7 +27,7 @@
     <div class="copyright float-right">
       &copy;
       {{ actualYear}}, made with <i class="material-icons">favorite</i> by
-      <a target="_blank" href="" target="_blank">Piszkos 12 csapata</a> for a better web.
+      <a target="_blank" href="https://es-csapat.web.app/" target="_blank">Piszkos 12 csapata</a> for a better web.
     </div>
   </div>
 </footer>
