--- a/src/app/page/edit-order/edit-order.component.html
+++ b/src/app/page/edit-order/edit-order.component.html
@@ -5,7 +5,7 @@
                 <h4 class="card-title">Edit Order</h4>
                 <p class="card-category">Change anything you'd like!</p>
             </div>
-            <form  #form="ngForm" action="">
+            <form  #orderForm="ngForm" action="">
                 <div class="col-md-10 offset-1">
                     <!-- <div class="form-group">
                         <label for="id">ID</label>
@@ -14,8 +14,8 @@
                     <div class="form-group">
                         <label for="customerID">Customer ID</label>
                         <input [(ngModel)]="order.customerID" type="number" class="form-control" id="customerID"
-                            name="customerID"  required #customerID="ngModel">
-                        <div [hidden]="customerID.valid || customerID.pristine" class="text-danger">
+                            name="customerID"  required [formControl]="customerIDControl">
+                        <div [hidden]="customerIDControl.valid || customerIDControl.pristine" class="text-danger">
                             Please choose a valid Customer ID!
                         </div>
                     </div>
@@ -23,17 +23,17 @@
                     <div class="form-group">
                         <label for="productID">Product ID</label>
                         <input [(ngModel)]="order.productID" type="number" class="form-control" id="productID"
-                            name="productID" required #productID="ngModel">
-                            <div [hidden]="productID.valid || productID.pristine" class="text-danger">
+                            name="productID" required [formControl]="productIDControl">
+                            <div [hidden]="productIDControl.valid || productIDControl.pristine" class="text-danger">
                                 Please choose a valid Product ID!
                             </div>
                     </div>
                     <div class="form-group">
                         <label for="amount">Amount</label>
                         <input [(ngModel)]="order.amount" type="number" class="form-control" id="amount" name="amount"
-                             required #amount="ngModel">
-                             <div [hidden]="amount.valid || amount.pristine" class="text-danger">
-                                Please set the amount!
+                             required [formControl]="amountControl">
+                             <div [hidden]="amountControl.valid || amountControl.pristine" class="text-danger">
+                                Please set a valid amount!
                              </div>
                     </div>
                     <div class="form-group">
@@ -47,8 +47,10 @@
                             <option value="paid">Paid</option>
                         </select> -->
                     </div>
-                    <button (click)="onSubmit(order)" class="btn btn-primary pull-right mat-raised-button mt-5 mb-5"
-                        mat-raised-button="" type="submit" [disabled]="form.invalid">
+                    <button (click)="onSubmit(order)" 
+                        class="btn btn-primary pull-right mat-raised-button mt-5 mb-5"
+                        mat-raised-button="" type="submit" 
+                        [disabled]="orderForm.invalid || customerIDControl.invalid || productIDControl.invalid || amountControl.invalid ">
                         <span class="mat-button-wrapper">Submit</span>
                         <div class="mat-button-ripple mat-ripple" matripple=""></div>
                         <div class="mat-button-focus-overlay"></div>
