--- a/src/app/page/edit-order/edit-order.component.html
+++ b/src/app/page/edit-order/edit-order.component.html
@@ -5,7 +5,7 @@
                 <h4 class="card-title">Edit Order</h4>
                 <p class="card-category">Change anything you'd like!</p>
             </div>
-            <form  #orderForm="ngForm" action="">
+            <form #orderForm="ngForm" action="">
                 <div class="col-md-10 offset-1">
                     <!-- <div class="form-group">
                         <label for="id">ID</label>
@@ -14,37 +14,36 @@
                     <div class="form-group">
                         <label for="customerID">Customer ID</label>
                         <input [(ngModel)]="order.customerID" type="number" class="form-control" id="customerID"
-                            name="customerID"  required [formControl]="customerIDControl">
+                            name="customerID" required [formControl]="customerIDControl">
                         <div [hidden]="customerIDControl.valid || customerIDControl.pristine" class="text-danger">
                             Please choose a valid Customer ID!
                         </div>
                     </div>
-                    <!-- pattern='/^\d{1,2}$/' -->
                     <div class="form-group">
                         <label for="productID">Product ID</label>
                         <input [(ngModel)]="order.productID" type="number" class="form-control" id="productID"
                             name="productID" required [formControl]="productIDControl">
-                            <div [hidden]="productIDControl.valid || productIDControl.pristine" class="text-danger">
-                                Please choose a valid Product ID!
-                            </div>
+                        <div [hidden]="productIDControl.valid || productIDControl.pristine" class="text-danger">
+                            Please choose a valid Product ID!
+                        </div>
                     </div>
                     <div class="form-group">
                         <label for="amount">Amount</label>
                         <input [(ngModel)]="order.amount" type="number" class="form-control" id="amount" name="amount"
-                             required [formControl]="amountControl">
-                             <div [hidden]="amountControl.valid || amountControl.pristine" class="text-danger">
-                                Please set a valid amount!
-                             </div>
+                            required [formControl]="amountControl">
+                        <div [hidden]="amountControl.valid || amountControl.pristine" class="text-danger">
+                            Please set a valid amount!
+                        </div>
                     </div>
                     <div class="form-group">
                         <label for="status">Status</label>
-                         <select [(ngModel)]="order.status"   class="form-control" id="status" name="status" required>
-                        <option *ngFor="let status of orderStatus" [value]="status.status">{{ status.status }}</option>
-                         </select>
+                        <select [(ngModel)]="order.status" class="form-control" id="status" name="status" required>
+                            <option *ngFor="let status of orderStatus" [value]="status.status">{{ status.status }}
+                            </option>
+                        </select>
                     </div>
-                    <button (click)="onSubmit(order)" 
-                        class="btn btn-primary pull-right mat-raised-button mt-5 mb-5"
-                        mat-raised-button="" type="submit" 
+                    <button (click)="onSubmit(order)" class="btn btn-primary pull-right mat-raised-button mt-5 mb-5"
+                        mat-raised-button="" type="submit"
                         [disabled]="orderForm.invalid || customerIDControl.invalid || productIDControl.invalid || amountControl.invalid ">
                         <span class="mat-button-wrapper">Submit</span>
                         <div class="mat-button-ripple mat-ripple" matripple=""></div>
