--- a/src/app/page/edit-customer/edit-customer.component.html
+++ b/src/app/page/edit-customer/edit-customer.component.html
@@ -9,20 +9,20 @@
           <form #customerForm="ngForm">
             <div class="col-md-10 offset-1">
               <div class="form-group">
-                <label for="name">First name</label>
+                <label for="first_name">First name</label>
                 <input [(ngModel)]="customer.first_name" type="text" class="form-control" id="first_name"
                 name="first_name" aria-describedby="first_name" required #firstName="ngModel">
-                <div [hidden]="firstName.valid || firstName.pristine">
+                <div [hidden]="firstName.valid || firstName.pristine" class="text-danger">
                   Please choose a firstname.
                 </div>
               </div>
 
               <div class="form-group">
-                <label for="name">Last name</label>
+                <label for="last_name">Last name</label>
                 <input [(ngModel)]="customer.last_name" type="text" class="form-control" id="last_name"
-                name="first_name" aria-describedby="last_name" required #lastName="ngModel">
-                <div [hidden]="lastName.valid || lastName.pristine">
-                  Please choose a lasttname.
+                name="last_name" aria-describedby="last_name" required #lastName="ngModel">
+                <div [hidden]="lastName.valid || lastName.pristine" class="text-danger">
+                  Please choose a lastname.
                 </div>
               </div>
 
@@ -30,7 +30,7 @@
                 <label for="name">Email</label>
                 <input [(ngModel)]="customer.email" type="email" class="form-control" id="email"
                 name="email" aria-describedby="email" required #email="ngModel">
-                <div [hidden]="email.valid || email.pristine">
+                <div [hidden]="email.valid || email.pristine" class="text-danger">
                   Please choose a email.
                 </div>
               </div>
@@ -39,7 +39,7 @@
                 <label for="price">Zip</label>
                 <input [(ngModel)]="customer.address.zip" type="number" class="form-control" id="zip"
                 name="zip" aria-describedby="zip" required #customerZip="ngModel" min="1">
-                <div [hidden]="customerZip.valid || customerZip.pristine">
+                <div [hidden]="customerZip.valid || customerZip.pristine" class="text-danger">
                   Please choose Zip
                 </div>
               </div>
@@ -48,7 +48,7 @@
                 <label for="name">Country</label>
                 <input [(ngModel)]="customer.address.country" type="country" class="form-control" id="country"
                 name="country" aria-describedby="country" required #country="ngModel">
-                <div [hidden]="country.valid || country.pristine">
+                <div [hidden]="country.valid || country.pristine" class="text-danger">
                   Please choose a Country.
                 </div>
               </div>
@@ -57,7 +57,7 @@
                 <label for="name">City</label>
                 <input [(ngModel)]="customer.address.city" type="city" class="form-control" id="city"
                 name="city" aria-describedby="city" required #city="ngModel">
-                <div [hidden]="city.valid || city.pristine">
+                <div [hidden]="city.valid || city.pristine" class="text-danger">
                   Please choose a City.
                 </div>
               </div>
@@ -66,7 +66,7 @@
                 <label for="name">Street</label>
                 <input [(ngModel)]="customer.address.street" type="street" class="form-control" id="street"
                 name="street" aria-describedby="street" required #street="ngModel">
-                <div [hidden]="street.valid || street.pristine">
+                <div [hidden]="street.valid || street.pristine" class="text-danger">
                   Please choose a street.
                 </div>
               </div>
@@ -76,7 +76,7 @@
                 <textarea  [(ngModel)]="customer.address.notes" name="description"
                 class="form-control" id="description" rows="3" required #customerNotes="ngModel"></textarea>
 
-                <div [hidden]="customerNotes.valid || customerNotes.pristine">
+                <div [hidden]="customerNotes.valid || customerNotes.pristine" class="text-danger">
                   Please choose description
                 </div>
               </div>
