--- a/src/app/page/edit-product/edit-product.component.html
+++ b/src/app/page/edit-product/edit-product.component.html
@@ -64,7 +64,7 @@
             </div>
 
             <button [disabled]="!productForm.form.valid" (click)="onSave()" type="submit"
-            class="btn btn-success float-right mb-4">Submit</button>
+            class="btn btn-success float-right mt-4 mb-4">Submit</button>
           </div>
         </form>
 
