--- a/src/app/page/edit-bill/edit-bill.component.html
+++ b/src/app/page/edit-bill/edit-bill.component.html
@@ -3,7 +3,7 @@
     <div class="card">
       <div class="card-header card-header-warning mb-3">
         <h4 class="card-title">Edit Bill</h4>
-        <p class="card-category">Bill Acount!</p>
+        <p class="card-category">Change anything you'd like!</p>
       </div>
   <form #billForm="ngForm">
     <div class="col-md-10 offset-1">
@@ -12,14 +12,14 @@
       <label for="orderID">OrderID</label>
       <input [(ngModel)]='bill.orderID' type="number" class="form-control" id="orderID"
        name="orderID" required aria-describedby="orderID" required  [formControl]="orderIDControll" >
-      <div [hidden]="orderIDControll.valid || orderIDControll.pristine">The Order required!</div>
+      <div [hidden]="orderIDControll.valid || orderIDControll.pristine" class="text-danger">Please choose a valid Order ID!</div>
     </div>
 
     <div class="form-group">
       <label for="amount">Amount</label>
       <input [(ngModel)]='bill.amount' type="number" class="form-control" id="amount"
        name="amount" aria-describedby="amount" required [formControl]="amountControll">
-       <div [hidden]="amountControll.valid || amountControll.pristine">The amount required!</div>
+       <div [hidden]="amountControll.valid || amountControll.pristine" class="text-danger">Please set a valid amount!</div>
     </div>
     <div class="form-group">
       <label for="status">Status</label>
@@ -34,7 +34,7 @@
   </div>
 
   <button [disabled]="!billForm.valid || orderIDControll.invalid || amountControll.invalid" (click)="onSave()" type="submit"
-    class="btn btn-warning float-right" mat-raised-button=""><span class="mat-button-wrapper">Submit</span>
+    class="btn btn-warning float-right mt-5 mb-4" mat-raised-button=""><span class="mat-button-wrapper">Submit</span>
     <div class="mat-button-ripple-mat-riple" matripple=""></div>
     <div class="mat-button-focus-overlay"></div>
   </button>
