table size egal

--- a/src/app/common/customers-card/customers-card.component.html
+++ b/src/app/common/customers-card/customers-card.component.html
@@ -1,4 +1,4 @@
-<div class="card col">
+<div class="card col h-100 d-flex flex-column">
   <div class="card-header card-header-info">
     <h4 class="card-title">Last 5 new Customers</h4>
     <p class="card-category"></p>
