--- a/src/app/page/dashboard/dashboard.component.html
+++ b/src/app/page/dashboard/dashboard.component.html
@@ -64,16 +64,16 @@
 
 </div>
   <div class="container-fluid">
-    <div class="row  h-100">
+    <div class="row">
 
-      <div class="col-xl-6 col-lg-12">
+      <div class="col-xl-6 col-lg-12 mb-4">
         <app-table-card [data]="newProductsList">
 
         </app-table-card>
         <!--<a routerLink="/product" class="stretched-link"></a>-->
       </div>
 
-      <div class="col-xl-6 col-lg-12">
+      <div class="col-xl-6 col-lg-12 mt-4 mb-4">
         <app-customers-card [data]="newCustomersList">
 
         </app-customers-card>
