--- a/src/app/page/dashboard/dashboard.component.html
+++ b/src/app/page/dashboard/dashboard.component.html
@@ -66,14 +66,14 @@
   <div class="container-fluid">
     <div class="row">
 
-      <div class="col-xl-6 col-lg-12 mb-4">
+      <div class="col-xl-6 mb-5 col-lg-12">
         <app-table-card [data]="newProductsList">
 
         </app-table-card>
         <!--<a routerLink="/product" class="stretched-link"></a>-->
       </div>
 
-      <div class="col-xl-6 col-lg-12 mt-4 mb-4">
+      <div class="col-xl-6 mb-4 col-lg-12">
         <app-customers-card [data]="newCustomersList">
 
         </app-customers-card>
