--- a/src/app/page/product-list/product-list.component.html
+++ b/src/app/page/product-list/product-list.component.html
@@ -41,7 +41,16 @@
                           currentPage: page,
                           totalItems:totalLength
                         }">
-                        <td *ngFor="let col of cols">{{ product[col.key] }}</td>
+                        <td *ngFor="let col of cols">{{ product[col.key] }}
+                          <ng-container *ngIf="product[col.key] === false">
+                            <span class="material-icons">check_box_outline_blank</span>
+
+                          </ng-container>
+                          <ng-container *ngIf="product[col.key] === true">
+                            <span class="material-icons">check_box</span>
+
+                          </ng-container>
+                        </td>
 
                             <td>
                                 <div class="btn-group">
