--- a/src/app/page/product-list/product-list.component.html
+++ b/src/app/page/product-list/product-list.component.html
@@ -41,14 +41,17 @@
                           currentPage: page,
                           totalItems:totalLength
                         }">
-                        <td *ngFor="let col of cols">{{ product[col.key] }}
+                        <td *ngFor="let col of cols">
                           <ng-container *ngIf="product[col.key] === false">
-                            <span class="material-icons">check_box_outline_blank</span>
-
+                            <span class="material-icons info">check_box_outline_blank</span>
                           </ng-container>
-                          <ng-container *ngIf="product[col.key] === true">
-                            <span class="material-icons">check_box</span>
 
+                          <ng-container *ngIf="product[col.key] === true">
+                            <span class="material-icons info">check_box</span>
+                          </ng-container>
+
+                          <ng-container *ngIf="product[col.key] !== true && product[col.key] !== false">
+                            {{ product[col.key] }}
                           </ng-container>
                         </td>
 
