--- a/src/app/page/bill-list/bill-list.component.html
+++ b/src/app/page/bill-list/bill-list.component.html
@@ -71,19 +71,7 @@
                       <tr *ngFor="let bill of billList$ | async | orderBy:order:reverse | paginate: { itemsPerPage: 10,
                           currentPage: page,
                           totalItems:totalLength}">
-                          <td *ngFor="let col of cols">
-                            <ng-container *ngIf="bill[col.key] === 'new'">
-                              <span class="material-icons info">fiber_new</span>
-                            </ng-container>
-
-                            <ng-container *ngIf="bill[col.key] === 'paid'">
-                              <span class="material-icons info">paid</span>
-                            </ng-container>
-
-                            <ng-container *ngIf="bill[col.key] !== 'new' && bill[col.key] !== 'paid'">
-                              {{ bill[col.key] }}
-                            </ng-container>
-                          </td>
+                          <td *ngFor="let col of cols">{{bill[col.key]}}</td>
                           <td>
                               <div class="btn-group">
                                   <button  [routerLink]="[bill.id]" class="btn btn-warning">
