--- a/src/app/page/customer-list/customer-list.component.html
+++ b/src/app/page/customer-list/customer-list.component.html
@@ -40,19 +40,7 @@
                     currentPage: page,
                     totalItems:totalLength
                   }">
-                  <td *ngFor="let col of cols">
-                  <ng-container *ngIf="customer[col.key] === false">
-                    <span class="material-icons info">check_box_outline_blank</span>
-                  </ng-container>
-
-                  <ng-container *ngIf="customer[col.key] === true">
-                    <span class="material-icons info">check_box</span>
-                  </ng-container>
-
-                  <ng-container *ngIf="customer[col.key] !== true && customer[col.key] !== false">
-                    {{ getObjValue(customer, col.key) }}
-                  </ng-container>
-                </td>
+                  <td *ngFor="let col of cols">{{getObjValue(customer, col.key)}}</td>
                     <td>
                           <div class="btn-group">
                               <button [routerLink]="[customer.id]" class="btn btn-warning">
